objects/SPM_Review_Coverage__c.object
<CustomObject>
    <fields>
        <fullName>MVendor_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>MVendor ID</description>
        <inlineHelpText>MVendor ID</inlineHelpText>
        <label>MVendor ID</label>
        <referenceTo>SPM_PVendor_MVendor__c</referenceTo>
        <relationshipLabel>Review Coverage</relationshipLabel>
        <relationshipName>Review_Coverage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MVendor_Name__c</fullName>
        <formula>MVendor_ID__r.PVendor__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MVendor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account Program ID</description>
        <inlineHelpText>Account Program ID</inlineHelpText>
        <label>Program ID</label>
        <referenceTo>SPM_Account_Program__c</referenceTo>
        <relationshipLabel>Review Coverage</relationshipLabel>
        <relationshipName>Review_Coverage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <formula>Program_ID__r.Service_Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Region ID field from Account Region Junction object</description>
        <inlineHelpText>Region ID field from Account Region Junction object</inlineHelpText>
        <label>Region ID</label>
        <referenceTo>SPM_Account_Regions__c</referenceTo>
        <relationshipLabel>Review Coverage</relationshipLabel>
        <relationshipName>Review_Coverage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region_Name__c</fullName>
        <formula>Region_ID__r.SPM_Region__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_ID__c</fullName>
        <description>Review</description>
        <inlineHelpText>Review</inlineHelpText>
        <label>Review ID</label>
        <referenceTo>SPM_Reviews__c</referenceTo>
        <relationshipLabel>Review Coverage</relationshipLabel>
        <relationshipName>Review_Coverage</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>